syntax = "proto3";

/*
   RPCs for YouTube guild settings
*/
package bot.youtube.settings.v1;

message YoutubeSettings {
  bool enabled = 1;
}

message GetYoutubeSettingsRequest {
  string guild_id = 1;
}

message GetYoutubeSettingsResponse {
  YoutubeSettings settings = 1;
}

message UpdateYoutubeSettingsRequest {
  string guild_id = 1;
  bool enabled = 2;
}

message UpdateYoutubeSettingsResponse {
  YoutubeSettings settings = 1;
}

service YoutubeSettingsService {
  rpc GetYoutubeSettings(GetYoutubeSettingsRequest) returns (GetYoutubeSettingsResponse);
  rpc UpdateYoutubeSettings(UpdateYoutubeSettingsRequest) returns (UpdateYoutubeSettingsResponse);
}
